--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="column is-three-fifths has-background-light">
             <h2 class="title is-2">Introductie</h2>
             <p>
-                Hallo en welkom bij mijn portfolio. Mijn naam is Koen Seppenwoolde en ik programmeer, ik ben ook een gamer en ik heb dus het meeste lol als ik een game aan het programmeren ben. Ik houd ervan om dingen simpel te houden dus dat doe ik hier ook. In dit portfolio zijn alle projecten te vinden die ik tot nu toe gedaan heb.
+                Hallo en welkom bij mijn portfolio. Mijn naam is Koen Seppenwoolde en ik programmeer. Ik ben een gamer en ik heb dus het meeste lol als ik een game aan het programmeren ben, mijn andere intresses zijn voetbal en gewichtheffen. Ik houd ervan om dingen simpel te houden dus dat doe ik hier ook. In dit portfolio zijn alle projecten te vinden die ik tot nu toe gedaan heb.
             </p>
         </div>
         <div class="column is one-fifths has-background-light">
